--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "fastapi[standard]>=0.129.0",
     "mcp-proxy>=0.11.0",
     "uvicorn>=0.41.0",
+    "python-dotenv>=1.0.1",
 ]
