docs: add install instructions

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 INFRACOST_API_KEY=your_api_key_here
 INFRACOST_API_URL=https://pricing.api.infracost.io/graphql
+
+GITHUB_TOKEN=your_github_token_here
